# volo

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PRODUCT.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/cache-core/: Cargo.toml
crates/cache-core/resources/: zen-ini-rules.yaml
crates/cache-core/src/: error.rs  lib.rs  startup.rs
crates/mesh-adapter-total-station/: Cargo.toml  README.md
crates/mesh-adapter-total-station/src/: builder.rs  csv_parser.rs  error.rs  fallback.rs  geometric_naming.rs  lib.rs  project.rs  project_loader.rs  raw_point.rs  reference_frame.rs  report.rs  report_builder.rs  scatter_csv.rs  shape_grid.rs  transform.rs
crates/mesh-adapter-total-station/tests/: builder_test.rs  csv_test.rs  end_to_end.rs  error_test.rs  fallback_test.rs  geometric_naming_test.rs  instruction_html_test.rs  project_test.rs  raw_point_test.rs  reference_frame_test.rs  report_builder_test.rs  report_test.rs  shape_grid_test.rs  transform_test.rs
crates/mesh-adapter-visual-ba/: Cargo.toml
crates/mesh-adapter-visual-ba/src/: api.rs  error.rs  ipc.rs  lib.rs  locate.rs  sidecar.rs
crates/mesh-adapter-visual-ba/tests/: api_test.rs  cancel_test.rs  e2e_real_binary_test.rs  ipc_roundtrip_test.rs  locate_test.rs  pattern_meta_v2_test.rs  poc_compare_test.rs  sidecar_e2e_test.rs  simulate_eval_test.rs
crates/mesh-app/: Cargo.toml
crates/mesh-app/src/: alignment.rs  export.rs  fuse.rs  lens_workspace.rs  lib.rs  measurements.rs  ndisplay.rs  output.rs  placement.rs  projects.rs  reconstruct.rs  total_station.rs  total_station_mapper.rs  visual.rs
crates/mesh-core/: Cargo.toml  README.md
crates/mesh-core/src/: coordinate.rs  error.rs  fuse.rs  lib.rs  measured_points.rs  point.rs  rigid.rs  sampling.rs  shape.rs  surface.rs  triangulate.rs  uncertainty.rs  uv.rs  weld.rs
crates/mesh-core/tests/: coordinate_test.rs  end_to_end.rs  export_adapt_test.rs  export_build_test.rs  export_obj_test.rs  export_targets_test.rs  measured_points_test.rs  point_test.rs  reconstruct_boundary_test.rs  reconstruct_direct_test.rs  reconstruct_dispatch_test.rs  reconstruct_nominal_test.rs  reconstruct_radial_provenance_cv_test.rs  reconstruct_radial_test.rs  shape_test.rs  surface_test.rs  triangulate_test.rs  uncertainty_test.rs  uv_test.rs  weld_test.rs
crates/volo-cli/: Cargo.toml
crates/volo-cli/src/: args.rs  config_file.rs  credential_args.rs  destructive.rs  domain_cred.rs  domain_ddc.rs  domain_deploy.rs  domain_env.rs  domain_gpu.rs  domain_health.rs  domain_ini.rs  domain_local_cache.rs  domain_log.rs  domain_machine.rs  domain_project.rs  domain_pso.rs  domain_secret.rs  domain_share.rs  domain_ssh.rs  domain_system.rs  domain_zen.rs  envelope.rs  host_args.rs  main.rs  manifest.rs  ndisplay_output.rs  output.rs  run.rs  stdin_input.rs
crates/volo-cli/tests/: cli_e2e.rs  cli_smoke.rs  usage_envelope.rs
crates/volo-shared/: Cargo.toml
crates/volo-shared/src/: dto.rs  envelope.rs  error.rs  exit_codes.rs  lib.rs  manifest.rs  schema.rs
sidecars/mesh-vba/: .gitignore  README.md  build_exe.ps1  build_exe.sh  pyproject.toml
sidecars/mesh-vba/benchmarks/: README.md  bench_ba_jacobian.py
sidecars/mesh-vba/schema/: ipc.schema.json
sidecars/mesh-vba/tests/: _dpx_fixtures.py  _vpcal_reference_centroid.py  conftest.py  test_ba.py  test_board_homography_inliers.py  test_board_layout_routing.py  test_board_layout_shape.py  test_calibrate.py  test_calibrate_sl.py  test_calibrate_sl_ipc.py  test_capture_manifest.py  test_capture_planner_cmd.py  test_capture_planner_gates.py  test_capture_planner_geometry.py  test_capture_planner_optimize.py  test_capture_planner_scoring.py  test_capture_planner_seed.py  test_capture_planner_visibility.py  test_compare_known.py  test_detect.py  test_detect_routing.py  test_dpx.py  test_eval_cold_init.py  test_eval_matrix.py  test_evaluate.py  test_generate_pattern_e2e.py  test_generate_structured_light.py  test_intrinsics_io.py  test_intrinsics_solve.py  test_ipc.py  test_ipc_generate_pattern_input.py  test_ipc_pattern_meta_v2.py  test_local_mm_per_cabinet.py  test_main_dispatch.py  test_model_constrained_ba.py  test_nominal.py  test_nominal_dot_positions.py  test_observability.py  test_pattern.py  test_pattern_per_cabinet.py  (+22 more)
sidecars/tracksim/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build_exe.sh  pyproject.toml
sidecars/tracksim/docs/: tracksim-CLI-运行流程.md
sidecars/tracksim/tests/: conftest.py  fakes.py  test_check_controller_mapping.py  test_checksum.py  test_cli_config_cmd.py  test_cli_conformance.py  test_cli_controllers.py  test_cli_convert_e2e.py  test_cli_convert_unit.py  test_cli_decode.py  test_cli_factory.py  test_cli_main_unit.py  test_cli_meta.py  test_cli_render.py  test_cli_run.py  test_cli_run_track.py  test_cli_runtime.py  test_cli_send.py  test_completion_convert.py  test_config.py  test_config_fbx.py  test_config_fbx_validate.py  test_config_validate_mapping.py  test_controller_sources.py  test_default_controller_mapping.py  test_docs_scaffold.py  test_envelope.py  test_errors.py  test_errors_fbx.py  test_factory_track.py  test_fakes_sim.py  test_fakes_transport.py  test_fix10_send_zero_duration.py  test_fix11_rate_validation.py  test_fix12_config_enum_validation.py  test_fix13_required_subcommands.py  test_fix14_bare_invocation.py  test_fix15_monitor_rate_validation.py  test_fix16_send_stdin_object.py  test_fix17_opentrackio_decode_errors.py  (+64 more)
sidecars/vpcal/: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  build_exe.ps1  build_exe.sh  pyproject.toml
sidecars/vpcal/docs/: CLI-运行流程.md  b2-real-data-capture.md  c1-capture-service.md  capture-workflow-guide.md  contract-manifest.json  decklink-bench-checklist.md  error-budget.csv  error-budget.md  exit-codes.md  razer-fixed-observation-acceptance.md  remediation-roadmap-v1.md  schema-versions.md  sim2real-protocol.md  vpcal_stage_display_spec.md  (+3 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  win_titlebar.rs
(+792 files in other folders)
