[workspace]
resolver = "2"
members = ["crates/*", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

# 合并 LMT + UECM 的依赖版本表；各 crate 填实时改用 `<dep>.workspace = true` 引用。
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
nalgebra = "0.33"
kiddo = "4"
argmin = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
ipnet = "2.9"
encoding_rs = "0.8"
directories = "5.0"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = "thin"
