[package]
name = "volo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "volo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# step 2c: UECM transport layer (commands/) + its core/data/startup/error backend.
cache-core = { path = "../crates/cache-core" }
# commands use tokio::sync::Mutex (UeJobRegistry) and tracing; run() inits tracing-subscriber.
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# commands/pso.rs timestamps job rows; commands/zen.rs edits the rules YAML.
chrono = { workspace = true }
serde_yaml = { workspace = true }

