[package]
name = "cache-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Volo cache core business logic (core/data/startup/error), zero-tauri. Consumed by volo-cli and src-tauri commands."

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
base64.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
rand.workspace = true
chrono.workspace = true
encoding_rs.workspace = true
ipnet.workspace = true
directories.workspace = true
schemars.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
regex = "1"
