[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracksim"
version = "0.1.0"
description = "Camera tracking protocol simulator (FreeD / OpenTrackIO)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pysdl3",
    "pyserial",
    "cbor2",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jsonschema",
    # PyInstaller drives build_exe.sh (review #16) to vendor a single-file CLI
    # into the workspace target/sidecar-vendor/<platform>/.
    "pyinstaller>=6.0",
]

[project.scripts]
tracksim = "tracksim.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
