[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "vpcal"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click",
    "pydantic>=2.0",
    "numpy",
    "scipy",
    "opencv-python-headless>=4.8,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "jsonschema",
    # PyInstaller drives build_exe.sh (review #16) to vendor a single-file CLI
    # into the workspace target/sidecar-vendor/<platform>/.
    "pyinstaller>=6.0",
]

[project.scripts]
vpcal = "vpcal.cli.main:main"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.version = ">=3.20"
# Python package lives under src/; the compiled module installs into it
# (CMake install DESTINATION "vpcal").  A C++ toolchain + CMake are build
# prerequisites (spec §1.1); if the compiled module is nonetheless absent at
# runtime, the solver transparently falls back to scipy.
wheel.packages = ["src/vpcal"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
CMAKE_POLICY_VERSION_MINIMUM = "3.5"

[tool.pytest.ini_options]
testpaths = ["tests"]
# `walkthrough` tests need gitignored real-capture data (_walkthrough/ and
# _main_path/) and are excluded from the default run so `pytest` is green on a
# clean checkout. Run them explicitly with `pytest -m walkthrough` on a dev
# machine that has the data.
addopts = "-m 'not walkthrough'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "walkthrough: end-to-end tests requiring gitignored real-capture data (run with -m walkthrough)",
]
